geek-deployment-db-prom-exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-auth-mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-auth-mongo
    spec:
      containers:
        - name: geek-auth-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: geek-auth-mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 30008
  selector:
    app: geek-auth-mongo
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-user-mongo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-user-mongo
    spec:
      containers:
        - name: geek-user-mongo
          image: mongo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: geek-user-mongo
spec:
  type: NodePort
  ports:
    - port: 27017
      nodePort: 30007
  selector:
    app: geek-user-mongo

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-task-mysql
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9104"
      labels:
        app: geek-task-mysql
    spec:
      containers:
        - name: geek-task-mysql
          image: mysql
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
        - name: mysql-exporter
          image: prom/mysqld-exporter
          imagePullPolicy: Always
          ports:
            - containerPort: 9104
              protocol: TCP
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: geek-task-mysql
  labels:
    name: geek-task-mysql
spec:
  type: NodePort
  ports:
    - name: geek-task-mysql
      port: 3306
      nodePort: 30006
      protocol: TCP
      targetPort: 3306
    - name: geek-task-mysql-prom
      port: 9104
      targetPort: 9104
  selector:
    app: geek-task-mysql
