geek-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geek-user-service
spec:
  ports:
    - name: http
      port: 18001
  selector:
    app: geek-user-service
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-user-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-user-service
    spec:
      containers:
        - name: geek-user-service
          image: 10.141.211.160:5000/geek/geek-user-service
          imagePullPolicy: Always
          ports:
            - containerPort: 18001
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: geek-task-service
spec:
  ports:
    - name: http
      port: 18002
  selector:
    app: geek-task-service
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-task-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-task-service
    spec:
      containers:
        - name: geek-user-service
          image: 10.141.211.160:5000/geek/geek-task-service
          imagePullPolicy: Always
          ports:
            - containerPort: 18002
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: geek-auth-service
spec:
  ports:
    - name: http
      port: 18000
  selector:
    app: geek-auth-service
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geek-auth-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geek-auth-service
    spec:
      containers:
        - name: geek-user-service
          image: 10.141.211.160:5000/geek/geek-auth-service
          imagePullPolicy: Always
          ports:
            - containerPort: 18000
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 500Mi
