zipkin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
  namespace: istio-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: zipkin
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      containers:
        - name: zipkin
          image: docker.io/openzipkin/zipkin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9411
          volumeMounts:
            - name: collect
              mountPath: /parquet
      volumes:
        - name: collect
          hostPath:
            path: /home/parquet
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: istio-system
spec:
  type: NodePort
  ports:
    - name: http
      port: 9411
  selector:
    app: zipkin
---
