geek-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: geek-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: geekservice
spec:
  hosts:
  - "*"
  gateways:
  - geek-gateway
  http:
  - match:
    - uri:
        prefix: /user
    route:
    - destination:
        host: geek-user-service
        port:
          number: 18001
  - match:
    - uri:
        prefix: /task
    route:
    - destination:
        host: geek-task-service
        port:
          number: 18002
  - match:
    - uri:
        prefix: /signtask
    route:
    - destination:
        host: geek-task-service
        port:
          number: 18002
  - match:
    - uri:
        prefix: /auth
    route:
    - destination:
        host: geek-auth-service
        port:
          number: 18000
